fix: assigning margin to pages caused horizontal scrolling

--- a/src/components/LayoutDefault/LayoutDefault.scss
+++ b/src/components/LayoutDefault/LayoutDefault.scss
@@ -1,22 +1,15 @@
 .application {
   padding-left: min(21vw, 13.5rem);
   display: flex;
-  position: relative;
   max-width: 1500px;
   margin-inline: auto;
-  position: relative;
 
   .pages-container {
-    width: 100%;
     min-height: 100vh;
     padding-block: 2rem;
     padding-inline: 0.25rem;
     display: grid;
     place-items: center;
     color: var(--clr-primary-300);
-
-    & > div {
-      width: 100%;
-    }
   }
 }
