--- a/src/routes/expertise/Expertise.scss
+++ b/src/routes/expertise/Expertise.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   overflow: hidden;
   padding: 0.5rem;
+  width: 100%;
 
   > *:not(:last-child) {
     margin-bottom: 2rem;
